--- a/less/global.less
+++ b/less/global.less
@@ -34,13 +34,18 @@ p {
   padding-bottom: 10px;
 }
 
+a {
+  font-size: 1.6rem;
+  text-decoration: none;
+}
+
 img {
   max-width: 100%;
   height: auto;
 }
 
 .container {
-  max-width: 800px;
+  max-width: @max-width;
   width: 100%;
   margin: 0 auto;
 }
