--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,5 +1,16 @@
 .home {
 
+  .header-section {
+    border-bottom: @border;
+
+    img {
+        display: block;
+        margin: auto;
+        margin-bottom: 30px;
+        width: 100%;
+    }
+  }
+
   .content-section {
     margin: 30px 0;
     display: flex;
@@ -25,7 +36,7 @@
 
   .inverse-content {
     padding-bottom: 30px;
-    border-bottom: 2px dashed @navigation-border;
+    border-bottom: @border;
 
     .text-content {
       padding-left: 1%;
@@ -49,7 +60,7 @@
 
   .content-pick {
     padding-top: 30px;
-    border-top: 2px dashed @navigation-border;
+    border-top: @border;
     display: flex;
     justify-content: space-between;
 
