--- a/less/variables.less
+++ b/less/variables.less
@@ -12,3 +12,9 @@
 @shark: #212529;
 @eastern-blue: #17A2B8;
 @sandy-beach: #FFEBCD;
+
+// Generic Border
+@border: 2px dashed @silver;
+
+// Layout
+@max-width: 800px;
