--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,6 +1,10 @@
 .home {
 
-  .header-section {
+  @media @mobile {
+    padding: 0 5%;
+  }
+
+  .container-header {
     border-bottom: @border;
 
     img {
@@ -17,19 +21,39 @@
     flex-wrap: wrap;
     justify-content: space-between;
 
-   
+    @media @mobile {
+      display: block;
+    }
     
     .text-content {
       width: 48%;
       padding-right: 1%;
+
+      @media @mobile {
+        padding-right: 0;
+        width: 100%;
+      }
     }
+
+    
 
     .img-content {
       width: 48%;
       padding-left: 1%;
 
+      @media @mobile {
+        padding-left: 0;
+        width: 100%;
+      }
+
       img {
         border-radius: 10px;
+
+        @media @mobile {
+          display: block;
+          height: auto;
+          width: 100%;
+        }
       }
     }
   }
@@ -39,19 +63,35 @@
     border-bottom: @border;
 
     .text-content {
+      order: 1;
       padding-left: 1%;
       padding-right: 0;
+
+      @media @mobile {
+        padding-left: 0;
+      }
     }
 
     .img-content {
       padding-right: 1%;
       padding-left: 0;
+
+      @media @mobile {
+        display: block;
+        height: auto;
+        padding-right: 0;
+        width: 100%;
+      }
     }
   }
 
   .content-destination {
     width: 75%;
     margin: 0 auto 30px;
+
+    @media @mobile {
+      width: 100%;
+    }
 
     img {
       border-radius: 10px;
@@ -64,9 +104,28 @@
     display: flex;
     justify-content: space-between;
 
+    @media @mobile {
+      display: block;
+    }
+
     .destination {
       width: 30%;
       margin-bottom: 30px;
+
+      @media @mobile {
+        margin: auto;
+        margin-bottom: 30px;
+        width: 80%;
+      }
+    }
+
+    .btn {
+      .cta-btn(2rem, 10px 0, 80%);
+
+      @media @mobile {
+        .cta-btn(2rem, 10px 0, 100%);
+        margin: auto;
+      }
     }
   }
 }// home
