--- a/less/mixins.less
+++ b/less/mixins.less
@@ -13,3 +13,31 @@
     text-align: center;
     width: @width;
 }
+
+.changeColor(@color,  @background) {
+    animation-name: morph;
+    animation-duration: 25s;
+    animation-iteration-count: infinite;
+    background-color: @background;
+    color: @color;
+}
+
+@keyframes beat {
+  0% {
+    background-color: red;
+    padding: 2% 0;
+  }
+  50% {
+    background-color: orange;
+    padding: 5% 0;
+  }
+  100% {
+    background-color: red;
+    padding: 2% 0;
+  }
+}
+  
+  /* The element to apply the animation to */
+  .changeColor(@color,  @background) {
+      animation: beat 1s ease infinite;
+  }
